Fix docker build.

--- a/ebook/examples/22_FoF_Spark.ipynb
+++ b/ebook/examples/22_FoF_Spark.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9eb9eca2-47cd-4201-b6ed-6c4c8ce93d1c",
    "metadata": {
     "tags": []
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3741e37d-be14-4f54-a983-25001937827e",
    "metadata": {
     "tags": []
@@ -85,13 +85,25 @@
        " [7, 1, 9]]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "line_to_triples (\"1 5 8 7 9\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9d4f53ec-ed5a-44e5-8562-adf4bfd45975",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "sc.stop()"
    ]
   },
   {
@@ -107,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "dc876d3a-caa7-4ba6-a55c-2869fb36eae4",
    "metadata": {
     "tags": []
@@ -125,21 +137,32 @@
     "from pyspark import SparkContext\n",
     "\n",
     "inputdir = \"../data/simple.input\"\n",
-    "outdir = \"/tmp/outputsimple.mr\"\n",
+    "outdir = \"/tmp/outputsimple.mr9\"\n",
     "\n",
     "from pyspark import SparkContext\n",
     "sc = SparkContext(\"local\", \"App Name\",)\n",
     "rdd = sc.textFile(f\"{inputdir}/*\")\n",
     "rdd = rdd.flatMap(line_to_triples)\n",
     "### TODO add a WordCount style reducer\n",
-    "...\n",
+    "rdd = rdd.map(lambda x: (str(x), 1))\n",
+    "rdd = rdd.reduceByKey(lambda x, y: x + y)\n",
     "### TODO Identify triples of count >=2\n",
-    "...\n",
+    "rdd = rdd.filter(lambda x: x[1]>1)\n",
     "### TODO format output to just triples\n",
-    "...\n",
+    "rdd = rdd.map(lambda x: x[0])\n",
     "rdd.saveAsTextFile(outdir)\n",
     "\n",
     "sc.stop()             "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e1192af-571a-4b2a-a2b6-46f72e7c4190",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.stop()"
    ]
   },
   {
