Update for first ray lecture.

--- a/ebook/23_ray.ipynb
+++ b/ebook/23_ray.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Ray: Task Programming with Remote Functions\n",
     "\n",
-    "So far we have looked at cloud programming tools geared towards data parallel applications driven by a data decomposition. But, as well recall from Chapter 2 of Mattson, there is also a task decomposition. Data decomposition matches the data science, groupby analysis workloads of Internet/cloud data processing, such as processing logs, crawling and indexing the Web. However, \"modern AI\" applications have different demands.\n",
+    "So far we have looked at cloud programming tools geared towards data parallel applications driven by a data decomposition. Data decomposition matches the data science, groupby analysis workloads of Internet/cloud data processing, such as processing logs, crawling and indexing the Web. However, \"modern AI\" applications have different demands.\n",
     "\n",
     "The paper [Ray: A Distributed Framework for Emerging AI Applications](https://arxiv.org/pdf/1712.05889.pdf) takes a different approach. The abstract is confusing:\n",
     "\n",
@@ -22,11 +22,13 @@
     "and a distributed and fault-tolerant store to manage the\n",
     "system’s control state.\n",
     "\n",
-    "All one really gets out of this is that it is a distributed task/actor programming model. IMO, this is an example of poor, underspecific writing. My statement on Ray is that:\n",
+    "All one really gets out of this is that it is a distributed task/actor programming model.\n",
     "\n",
-    "  > RB: Data parallel frameworks, such as Dask and Spark, do not capture the task/actor decomposition needed to encode parallelism for modern AI applications.\n",
-    "  \n",
-    "OK, that's not perfect either. As we dig into the paper, we find more specific statements that shed light on the issues:\n",
+    "__Task Parallelism__: the decomposition of a program into tasks that can be executed in parallel.\n",
+    "\n",
+    "We have seen this concept with OpenMP in which tasks are equal to basic blocks or blocks of loop iterations.  We also saw this in the work/span lecture and problems in which each function call is a task. For Ray, functions will be tasks. So, parallelism will be defined on a per function basis.\n",
+    "\n",
+    "__Actor based__: we will cover this in the next lecture.\n",
     "\n",
     "> They must aim not only to exploit the data gathered, but also to explore the space of possible actions. \n",
     "\n",
@@ -64,6 +66,15 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-13 20:30:46,823\tINFO util.py:159 -- Outdated packages:\n",
+      "  ipywidgets==7.6.5 found, needs ipywidgets>=8\n",
+      "Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -94,8 +105,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-06-10 16:53:41,446\tWARNING services.py:1826 -- WARNING: The object store is using /tmp instead of /dev/shm because /dev/shm has only 67108864 bytes available. This will harm performance! You may be able to free up space by deleting files in /dev/shm. If you are inside a Docker container, you can increase /dev/shm size by passing '--shm-size=2.29gb' to 'docker run' (or add it to the run_options list in a Ray cluster config). Make sure to set this to more than 30% of available RAM.\n",
-      "2023-06-10 16:53:41,568\tINFO worker.py:1636 -- Started a local Ray instance.\n"
+      "2023-11-13 20:30:51,798\tWARNING services.py:1889 -- WARNING: The object store is using /tmp instead of /dev/shm because /dev/shm has only 67108864 bytes available. This will harm performance! You may be able to free up space by deleting files in /dev/shm. If you are inside a Docker container, you can increase /dev/shm size by passing '--shm-size=3.66gb' to 'docker run' (or add it to the run_options list in a Ray cluster config). Make sure to set this to more than 30% of available RAM.\n",
+      "2023-11-13 20:30:52,966\tINFO worker.py:1642 -- Started a local Ray instance.\n"
      ]
     }
    ],
@@ -127,7 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Executing the for loop took 4.007 seconds.\n",
+      "Executing the for loop took 4.014 seconds.\n",
       "The results are: [0, 1, 2, 3]\n"
      ]
     }
@@ -169,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Executing the for loop took 1.018 seconds.\n",
+      "Executing the for loop took 1.042 seconds.\n",
       "The results are: [0, 1, 2, 3]\n"
      ]
     }
@@ -258,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "10166"
+       "10025"
       ]
      },
      "execution_count": 6,
@@ -308,7 +319,7 @@
     {
      "data": {
       "text/plain": [
-       "49043"
+       "48029"
       ]
      },
      "execution_count": 8,
@@ -351,7 +362,7 @@
     {
      "data": {
       "text/plain": [
-       "49043"
+       "48029"
       ]
      },
      "execution_count": 9,
@@ -392,7 +403,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.05 s ± 11.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.05 s ± 14.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -428,7 +439,7 @@
     {
      "data": {
       "text/plain": [
-       "49043"
+       "48029"
       ]
      },
      "execution_count": 11,
@@ -462,7 +473,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.76 s ± 114 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.49 s ± 238 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -490,10 +501,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9b3be9ac-adfe-499d-a975-f1b940366b0e",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48029"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "@ray.remote\n",
     "def inner_loop2(i, gmat):\n",
@@ -517,10 +541,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "9751bc89-4f21-4874-8fc0-637640f2aa9c",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.49 s ± 260 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "\n",
@@ -546,10 +580,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c41b2185-b785-4bf0-82ec-1811aa4384ff",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48029"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "@ray.remote\n",
     "def inner_loop3(i, gmat):\n",
@@ -575,10 +622,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "3819afde-8041-4d1d-b89f-7f4a028039a6",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.24 s ± 18.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "\n",
@@ -603,7 +660,7 @@
     "\n",
     "* Ray serializes/deserializes objects, giving the appearance of shared memory.\n",
     "    * the shared memory abstraction for global variables is both good and bad.\n",
-    "    * _good_: makes programming easy. prevents \n",
+    "    * _good_: makes programming easy. \n",
     "    * _bad_ : implicit data movement makes performance opaque\n",
     "\n",
     "## Outcomes\n",
@@ -613,8 +670,17 @@
     "      * `get()` on a remote function waits for completion and fetches its return values\n",
     "  * The `ray.remote` decorator makes a function suitable for parallel execution\n",
     "  * The `remote()` call starts asynchronous execution of a function.\n",
+    "  * Distributed functio\n",
     "  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "878c5821-71e3-43a1-ba50-614cca3b5f6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
