--- a/ebook/23_ray.ipynb
+++ b/ebook/23_ray.ipynb
@@ -59,21 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "1488ee1b-0003-4be7-a3dd-3b18c6a2d015",
    "metadata": {
     "tags": []
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-11-13 20:30:46,823\tINFO util.py:159 -- Outdated packages:\n",
-      "  ipywidgets==7.6.5 found, needs ipywidgets>=8\n",
-      "Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -95,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "2678aaf1-6e5c-434f-bf69-ea1afac8012a",
    "metadata": {
     "tags": []
@@ -105,8 +96,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 20:30:51,798\tWARNING services.py:1889 -- WARNING: The object store is using /tmp instead of /dev/shm because /dev/shm has only 67108864 bytes available. This will harm performance! You may be able to free up space by deleting files in /dev/shm. If you are inside a Docker container, you can increase /dev/shm size by passing '--shm-size=3.66gb' to 'docker run' (or add it to the run_options list in a Ray cluster config). Make sure to set this to more than 30% of available RAM.\n",
-      "2023-11-13 20:30:52,966\tINFO worker.py:1642 -- Started a local Ray instance.\n"
+      "2023-11-13 22:14:08,812\tINFO worker.py:1476 -- Calling ray.init() again after it has already been called.\n"
      ]
     }
    ],
@@ -128,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "dc077975-7d7c-4d29-858e-d5584e1b8a0f",
    "metadata": {
     "tags": []
@@ -138,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Executing the for loop took 4.014 seconds.\n",
+      "Executing the for loop took 4.013 seconds.\n",
       "The results are: [0, 1, 2, 3]\n"
      ]
     }
@@ -170,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "1a57fd7a-642b-46fe-9151-88a50801f95b",
    "metadata": {
     "tags": []
@@ -180,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Executing the for loop took 1.042 seconds.\n",
+      "Executing the for loop took 1.051 seconds.\n",
       "The results are: [0, 1, 2, 3]\n"
      ]
     }
@@ -230,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "fb125466-67d1-471b-95d9-09e408a8b067",
    "metadata": {
     "tags": []
@@ -240,7 +230,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ObjectRef(c8ef45ccd0112571ffffffffffffffffffffffff0100000001000000), ObjectRef(16310a0f0a45af5cffffffffffffffffffffffff0100000001000000), ObjectRef(c2668a65bda616c1ffffffffffffffffffffffff0100000001000000), ObjectRef(32d950ec0ccf9d2affffffffffffffffffffffff0100000001000000)]\n"
+      "[ObjectRef(d2a4a0064183ef42ffffffffffffffffffffffff0100000001000000), ObjectRef(08e80102ee2945b3ffffffffffffffffffffffff0100000001000000), ObjectRef(7f952e072c330df3ffffffffffffffffffffffff0100000001000000), ObjectRef(22d5b962afc4daf0ffffffffffffffffffffffff0100000001000000)]\n"
      ]
     }
    ],
@@ -260,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "c675c9bc-cb71-4d81-9c06-988489c8bedd",
    "metadata": {
     "tags": []
@@ -269,10 +259,10 @@
     {
      "data": {
       "text/plain": [
-       "10025"
+       "9940"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "2f4b5e1d-2b6e-435e-9e45-388c15e0d220",
    "metadata": {
     "tags": []
@@ -310,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "b1c028d1-0b6a-4e3b-906c-5ad064e4bdd6",
    "metadata": {
     "tags": []
@@ -319,10 +309,10 @@
     {
      "data": {
       "text/plain": [
-       "48029"
+       "46990"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "7532409e-8fa3-497e-811b-38dfef5186fb",
    "metadata": {
     "tags": []
@@ -362,10 +352,10 @@
     {
      "data": {
       "text/plain": [
-       "48029"
+       "46990"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "75a096a5-87e7-499d-8b7c-09c8d7ce681e",
    "metadata": {
     "tags": []
@@ -403,7 +393,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.05 s ± 14.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.07 s ± 14 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -501,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "9b3be9ac-adfe-499d-a975-f1b940366b0e",
    "metadata": {
     "tags": []
@@ -510,10 +500,10 @@
     {
      "data": {
       "text/plain": [
-       "48029"
+       "46990"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "c41b2185-b785-4bf0-82ec-1811aa4384ff",
    "metadata": {
     "tags": []
@@ -589,10 +579,10 @@
     {
      "data": {
       "text/plain": [
-       "48029"
+       "46990"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "3819afde-8041-4d1d-b89f-7f4a028039a6",
    "metadata": {
     "tags": []
@@ -632,7 +622,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.24 s ± 18.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.28 s ± 27.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -670,14 +660,21 @@
     "      * `get()` on a remote function waits for completion and fetches its return values\n",
     "  * The `ray.remote` decorator makes a function suitable for parallel execution\n",
     "  * The `remote()` call starts asynchronous execution of a function.\n",
-    "  * Distributed functio\n",
-    "  "
+    "  * remote functions run task-parallel (when they are invoked concurrently)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "878c5821-71e3-43a1-ba50-614cca3b5f6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "113e8fa0-2848-4fef-b63b-6821de524f0b",
    "metadata": {},
    "outputs": [],
    "source": []
