--- a/ebook/README.ipynb
+++ b/ebook/README.ipynb
@@ -16,51 +16,16 @@
     "  * github -- cloud-based repository management for sharing stuff\n",
     "  * and then many others.\n",
     "\n",
-    "To get here, I have given you a Docker container.  Follow `environment/instructions` in the [PCDS repo]"
+    "To get here, I have given you a Docker container.  Follow `environment/instructions`."
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4bdc508e-ceab-4da8-bd71-9b3b4486834e",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70afdd4c-4101-4035-93d8-f917604e9436",
    "metadata": {},
-   "source": [
-    "## RB notes\n",
-    "\n",
-    "RB don't do reducers. Don't do loop.\n",
-    "RB must put caching first.\n",
-    "RB do OpenMP loops and reduction as syntax later.\n",
-    "RB loop fusion.  And dynamic scheduling. And loops.\n",
-    "\n",
-    "You shoud never do vectorization unless you know it hasn't been done.\n",
-    "\n",
-    "Mon 18 \n",
-    "Weds 20 -- Cilk\n",
-    "Mon 25 -- OpenMP\n",
-    "Weds 27 -- ILP\n",
-    "Mon Oct 2 -- vector\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f160dc5d-e43f-4b19-9d92-5ed890775fdf",
-   "metadata": {},
+   "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a1d03d8e-3f95-4e30-bb59-26638e571961",
-   "metadata": {},
-   "source": [
-    "ask about work and span"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2582da94-6fc2-4365-84c5-2cf3d5866646",
-   "metadata": {},
-   "source": [
-    "read a simple vectorize program and loop end.  what are pieces?"
-   ]
   }
  ],
  "metadata": {
