--- a/ebook/03_moores_multicore.ipynb
+++ b/ebook/03_moores_multicore.ipynb
@@ -25,9 +25,9 @@
     "\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Dual_Core_Generic.svg/440px-Dual_Core_Generic.svg.png\" title=\"Multicore\" />\n",
     "\n",
-    "The physical layout of the transistors of the chip how separate regions implementing separate cores (as seen on https://i.stack.imgur.com/xCqqv.jpg).\n",
+    "The physical layout of the transistors of the chip how separate regions implementing separate cores \n",
     "\n",
-    "<img src=\"https://i.stack.imgur.com/xCqqv.jpg\" title=\"Multicore annotated die (https://i.stack.imgur.com/xCqqv.jpg)\" />\n",
+    "<img src=\"https://www.cpushack.com/wp-content/uploads/2018/03/SB-EPLayout.jpg\" width=\"386\" title=\"Sandy Bridge Die Layout\" /> \n",
     "\n",
     "Parallelism is implemented by:\n",
     "  * running separate, independent processes on different cores\n",
@@ -45,27 +45,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Moore's Law == More Parallelism\n",
+    "## End of Moore's Law == More Parallelism\n",
     "\n",
     "Moore’s law -- The number of transistors that can be inexpensively placed on an integrated circuit is increasing exponentially, doubling approximately every two years.\n",
     "\n",
-    "* The observation has held for half a century\n",
+    "* The observation held for half a century\n",
     "\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/9/9d/Moore%27s_Law_Transistor_Count_1971-2016.png\" width=\"768\" title=\"Moore's Law\" />\n",
     "\n",
     "Moore's law is commonly misinterpreted as meaning that processing power increases exponentially. This was the case for a long time, but not what Moore's law says.\n",
     "\n",
-    "Moore's law continues to hold, but it is not always helpful:\n",
+    "Moore's law is ending or has ended. Toward the end of Moore's Law (2004-present)\n",
     "\n",
     "* More transistors has become more cores (independent processing units on the same chip)\n",
     "* In 2004, a 'processor' turned into a parallel computer (Itanium 2)\n",
-    "* This has progressed to processors with 16 cores, GPUs, etc.\n",
+    "* This has progressed to processors with 96 cores, GPUs, etc.\n",
     "\n",
     "The chip vendors tell us we have faster processors, not parallel computers. So we (the programmers) must write parallel code to make software faster on multiple cores with the same clock speed and number of transistors.  \n",
     "  \n",
     "#### Conclusion: \n",
     "\n",
-    "Moore's law does not mean that we get more processing power over time. It's not that simple. It's implementation has meant that we get more processing power at the expense of needing to encode more parallelism in programs. "
+    "We do not get more processing power over time. It's not that simple. It's implementation has meant that we get more processing power at the expense of needing to encode more parallelism in programs. "
    ]
   },
   {
