--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -21,7 +21,48 @@
     "#### [Strong Scaling](02_strong_scaling.ipynb) (Sep. 4)\n",
     "* Amdahls Law\n",
     "* Speedup\n",
-    "* Parallel Efficiency"
+    "* Parallel Efficiency\n",
+    "    \n",
+    "#### [OpenMP](04_open_mp.ipynb) (Sep. 9)\n",
+    "* What is OpenMP (parallel C/Fortran on multicore, shared-memory architectures)\n",
+    "* Serial to Parallel Refactoring\n",
+    "* System overview\n",
+    "    * Preprocessor\n",
+    "    * Library\n",
+    "    * Runtime\n",
+    "* Example #parallel directive\n",
+    "    * Blocks and scoping\n",
+    "    * Interacting with the environment\n",
+    "* Reference Materials : https://hpc-tutorials.llnl.gov/openmp/\n",
+    "\n",
+    "#### [CPU Parallelism: Multicore](03_moores_multicore.ipynb) (Sep. 11)\n",
+    "* What is a CPU? (evolution of CPUs, motivation for parallelism, Moore's Law)\n",
+    "* Multicore\n",
+    "    * Shared-memory\n",
+    "\n",
+    "#### [Memory Hierarchy](05_cache_hierarchy.ipynb) (Sep 13)\n",
+    "* Latencies\n",
+    "* Cache coherency\n",
+    "* Row versus column order\n",
+    "* LM Bench\n",
+    "* **Read**: https://siboehm.com/articles/22/Fast-MMM-on-CPU\n",
+    "\n",
+    "#### [Cilk](06_fork_join.ipynb)  (Sep. 18)\n",
+    "* work and span\n",
+    "* fork/join parallelism\n",
+    "* loop parallelism\n",
+    "* work stealing and scheduling\n",
+    "* **Read**: Work and Span https://en.wikipedia.org/wiki/Analysis_of_parallel_algorithms\n",
+    "\n",
+    "#### [Loop Parallelism](07_openmp_loops.ipynb) (Sep. 20)\n",
+    "\n",
+    "* Scoping and thread local variables\n",
+    "* Loop dependencies\n",
+    "* Loop fusion\n",
+    "* Loop fission\n",
+    "* False sharing\n",
+    "* Reductions in OpenMP\n",
+    "    \n"
    ]
   },
   {
@@ -49,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
