Move row-column and add false sharing.

--- a/ebook/05_cache_hierarchy.ipynb
+++ b/ebook/05_cache_hierarchy.ipynb
@@ -170,6 +170,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### False Sharing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### LMBench: Understanding Cache Misses\n",
     "\n",
     "LMBench is a suite of performance benchmarking tools written by Carl Staelin and Larry McVoy in 1996. The strided access benchmark still provides the best insight into the structure of cache latencies.  The experiment does the following:\n",
@@ -186,6 +193,13 @@
     "  * you have to understand the cache hierarchy and reason about memory access patterns\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
