--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -40,27 +40,26 @@
     "* Multicore\n",
     "    * Shared-memory\n",
     "\n",
-    "#### [Memory Hierarchy](05_cache_hierarchy.ipynb) (Sep 11)\n",
+    "#### [Memory Hierarchy](05_cache_hierarchy.ipynb) (Sep 16)\n",
     "* Latencies\n",
     "* Cache coherency\n",
     "* Row versus column order\n",
     "* LM Bench\n",
     "* **Read**: https://siboehm.com/articles/22/Fast-MMM-on-CPU\n",
     "\n",
-    "#### [Cilk](06_fork_join.ipynb)  (Sep. 16)\n",
+    "#### [Cilk](06_fork_join.ipynb)  (Sep. 18)\n",
     "* work and span\n",
     "* fork/join parallelism\n",
     "* loop parallelism\n",
-    "* work stealing and scheduling\n",
+    "* reducers\n",
     "* **Read**: Work and Span https://en.wikipedia.org/wiki/Analysis_of_parallel_algorithms\n",
     "\n",
-    "#### [Loop Parallelism](07_openmp_loops.ipynb) (Sep. 20)\n",
+    "#### [Loop Parallelism](07_openmp_loops.ipynb) (Sep. 23)\n",
     "\n",
     "* Scoping and thread local variables\n",
     "* Loop dependencies\n",
     "* Loop fusion\n",
     "* Loop fission\n",
-    "* False sharing\n",
     "* Reductions in OpenMP\n",
     "    \n"
    ]
