--- a/ebook/06_fork_join.ipynb
+++ b/ebook/06_fork_join.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fork Join Parallelism"
+    "# Concepts\n",
+    "* fork/join\n",
+    "* work and span\n",
+    "* CILK multithreaded programming \n",
+    "\n",
+    "## Fork Join Parallelism"
    ]
   },
   {
@@ -5833,10 +5838,20 @@
    "metadata": {},
    "source": [
     "# Cilk\n",
+    "\n",
+    "\n",
+    "Cilk is a programing language extension that implements parallelism for shared memory programming using fork=join  for C and C++. Cilk is less commonly than OpenMP, but in many ways is superior.\n",
+    "\n",
+    "Pros:\n",
+    "* Cilk syntax simpler and easier to use\n",
+    "* Dynamic scheduling of tasks for all programs\n",
+    "\n",
+    "Cons:\n",
+    "* Limited compiler support (clang only)\n",
+    "* Less expressive\n",
+    "\n",
     "For more information see [opencilk](https://www.opencilk.org/)\n",
     "To download see [github](https://github.com/OpenCilk/opencilk-project)\n",
-    "\n",
-    "Cilk is a task parallel platform for shared memory programming using fork=join parallelism for c and c++.\n",
     "\n",
     "Cilk is designed to allow the user to express logical parallelism without needing to think about any of the implementation details.\n",
     "\n",
@@ -5864,7 +5879,7 @@
     "}\n",
     "```\n",
     "\n",
-    "For ease cilk also provides a parallel for loop with `cilk_for`\n",
+    "Most programming uses `cilk_for` to parallelize loops, rather than calls `spawn` and `scope`.\n",
     "\n",
     "```c++\n",
     "void dot_product(int* A, int* B, int* C, int n){\n",
@@ -5937,6 +5952,13 @@
     "}\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
