--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -65,9 +65,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f082fd58-5db6-4f69-9a63-20a165c3f5b1",
+   "metadata": {},
+   "source": [
+    "#### Things to Understand (Study Guide)\n",
+    "\n",
+    "These examples and readings embody concepts that I think it is important to know. These are things that I want to highlight that go beyond the treatment in the lecture notes or homework.\n",
+    "\n",
+    "* Row/Column example: [row_column.c](./examples/openmp/row_column.c)\n",
+    "* False sharing example: [sharing.c](./examples/openmp/sharing.c)\n",
+    "* Fast matrix multiplication example: https://siboehm.com/articles/22/Fast-MMM-on-CPU\n",
+    "* Cilk: examples Integral and Matrix Multiplication on [http://preview.speedcode.org/](http://preview.speedcode.org/)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46924314-9734-4557-a897-2a5bd1d530fe",
+   "id": "ba6e4bec-6fb7-4959-8b88-7a5235794f17",
    "metadata": {},
    "outputs": [],
    "source": []
