--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -61,7 +61,66 @@
     "* Loop fusion\n",
     "* Loop fission\n",
     "* Reductions in OpenMP\n",
-    "    \n"
+    "\n",
+    "#### [CPU Parallelism: ILP](08_ILP.ipynb) (Sep 25)\n",
+    "* ILP\n",
+    "    * Pipelines \n",
+    "    * Vectorization\n",
+    "    * Other Sources (out-of-order execution, branch prediction, speculative execution)\n",
+    " \n",
+    "#### [Example: Numba Jit Compilation](examples/ex_jit.ipynb) (Sep. 25)\n",
+    "* **Read**:\n",
+    "    * https://numba.pydata.org/\n",
+    "    * https://numba.readthedocs.io/en/stable/user/5minguide.html\n",
+    "* [Solutions](solutions/ex_jit_soln.ipynb)\n",
+    "\n",
+    "#### [Factors Against Parallelism](09_factors.ipynb) (Sep. 30)\n",
+    "* Interference\n",
+    "* Skew\n",
+    "* Startup costs\n",
+    "* Overlap\n",
+    "\n",
+    "#### [Processes and Threads](10_processthread.ipynb) (Sep. 30)\n",
+    "* OS processes\n",
+    "* OS threads\n",
+    "* virtual memory\n",
+    "\n",
+    "#### [Vector Programming](11_vectorization.ipynb) (Oct. 2)\n",
+    "* vector processing\n",
+    "* assemmbly code (overview)\n",
+    "* vector registers\n",
+    "* programming with intrinsics\n",
+    "* (see examples on godbolt linked in notebooks)\n",
+    "\n",
+    "#### [Java Thread Programming](12_javathreads.ipynb) (Oct. 7)\n",
+    "  * fork/join in java\n",
+    "  * Thread classes and Runnable interfaces\n",
+    "\n",
+    "#### [Java Synchronization and Thread Safety](13_synchronization.ipynb) (Oct. 9)\n",
+    "* fork/join in java\n",
+    "* Thread classes and Runnable interfaces\n",
+    "* [Example: Synchronization in Java](examples/13_ex_javasycnh.ipynb)\n",
+    "    * [Solution: Syncrhonization in Java](examples/solutions/13_ex_javasynch.ipynb)\n",
+    "    \n",
+    "#### [Mutual Exclusion](14_mutex.ipynb) (Oct. 14)\n",
+    "* Peterson's algorithm\n",
+    "* Bakery algorithm\n",
+    "* Fast Mutual Exclusion\n",
+    "* **Read**: Herlihy and Shavit. _Art of Multiprocessor Programming_. \n",
+    "  * Chapter 1: all\n",
+    "  * Chapter 2: 2.1-2.6\n",
+    "  * Chapter 7: 7.1-7.3.\n",
+    "* [Example: Fast Mutex in Java](examples/14_ex_fastmutex.ipynb)\n",
+    "  * [Solution: Fast Mutex in Java](examples/solutions/14_ex_fastmutex_soln.ipynb)\n",
+    " \n",
+    "\n",
+    "#### [Roofline Performance Model](15_roofline.ipynb) (Oct. 16)\n",
+    "* I/O intensity\n",
+    "* Off-chip bandwidth\n",
+    "* I/O and compute limited kernels\n",
+    "* **Read**: Williams et al. [Roofline: An Insightful Visual Performance Model for Floating-Point Programs and Multicore Architectures](https://escholarship.org/uc/item/5tz795vq), CACM, 52(4), 2009.\n",
+    " \n",
+    "#### Midterm (Oct. 21)\n"
    ]
   },
   {
